Add certificate on Nonprod

--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ plugins:
 
 custom:
   StageName: ${opt:stage, 'sandpit'}
+  StageNameCert: ${opt:stageCert, 'SANDPIT'}
   domains:
     default: api-emails.${self:custom.StageName}.cloud.spacenow.com
     prod: api-emails.spacenow.com
@@ -14,7 +15,7 @@ custom:
     domainName: ${self:custom.domains.${self:custom.StageName}, self:custom.domains.default}
     basePath: ""
     stage: ${self:custom.StageName}
-    certificateArn: ${ssm:/${self:custom.StageNameCert, 'SANDPIT'}/ACM_CERTIFICATE}
+    certificateArn: ${ssm:/${self:custom.StageNameCert}/ACM_CERTIFICATE}
     createRoute53Record: true
     endpointType: "regional"
 
@@ -31,7 +32,7 @@ provider:
   stage: ${opt:stage, 'sandpit'}
   region: ap-southeast-2
   environment:
-    EMAIL: ${ssm:/${self:custom.StageNameCert, 'SANDPIT'}/SPACENOW/ADMIN_EMAIL, env:EMAIL}
+    EMAIL: ${ssm:/${self:custom.StageNameCert}/SPACENOW/ADMIN_EMAIL, env:EMAIL}
     DOMAIN: ${env:DOMAIN}
   iamRoleStatements:
     - Effect: "Allow"
