Create domain thouhgh sls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ jobs:
             export ACCOUNT_ID=211853473677
             chmod +x scripts/aws-cli-assumerole.sh
             source scripts/aws-cli-assumerole.sh
+            sls create_domain --stage nonprod --stageCert NONPROD --accountId ${ACCOUNT_ID}
             sls deploy --stage nonprod --stageCert NONPROD --accountId ${ACCOUNT_ID}
 
   deploy-prod:
@@ -100,6 +101,7 @@ jobs:
             export ACCOUNT_ID=985566274543
             chmod +x scripts/aws-cli-assumerole.sh
             source scripts/aws-cli-assumerole.sh
+            sls create_domain --stage prod --stageCert PROD --accountId ${ACCOUNT_ID}
             sls deploy --stage prod --stageCert PROD --accountId ${ACCOUNT_ID}
 
 workflows:
