--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   deploy-dev:
     docker:
-      - image: circleci/node:chakracore-10
+      - image: circleci/node:8.10
 
     working_directory: ~/repo
 
@@ -37,7 +37,7 @@ jobs:
 
   deploy-non-prod:
     docker:
-      - image: circleci/node:chakracore-10
+      - image: circleci/node:8.10
 
     working_directory: ~/repo
 
@@ -72,7 +72,7 @@ jobs:
 
   deploy-prod:
     docker:
-      - image: circleci/node:chakracore-10
+      - image: circleci/node:8.10
 
     working_directory: ~/repo
 
