--- a/serverless.yml
+++ b/serverless.yml
@@ -8,12 +8,15 @@ plugins:
 custom:
   domains:
     default: api-emails.${opt:stage, 'sandpit'}.cloud.spacenow.com
-    # prod: api-emails.spacenow.com
+    prod: api-emails.spacenow.com
+  certificates:
+    default: ${ssm:/${opt:stageCert, 'SANDPIT'}/ACM_CERTIFICATE}
+    prod: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/ACM_CERTIFICATE}
   customDomain:
     domainName: ${self:custom.domains.${opt:stage, 'sandpit'}, self:custom.domains.default}
     basePath: ""
     stage: ${opt:stage, 'sandpit'}
-    certificateArn: ${ssm:/${opt:stageCert, 'SANDPIT'}/ACM_CERTIFICATE}
+    certificateArn: ${self:custom.certificates.${opt:stage, 'sandpit'}, self:custom.certificates.default}
     createRoute53Record: true
     endpointType: "regional"
 
