--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   },
   "devDependencies": {
     "aws-sdk": "~2.451.0",
-    "serverless-domain-manager": "^3.3.0",
-    "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.10.1",
-    "serverless-prune-plugin": "^1.4.0"
+    "serverless-domain-manager": "~3.3.0",
+    "serverless-dotenv-plugin": "~2.1.1",
+    "serverless-offline": "~5.10.1",
+    "serverless-prune-plugin": "~1.4.0"
   },
   "dependencies": {
-    "babel-runtime": "~6.26.0",
     "moment": "~2.24.0",
-    "source-map-support": "~0.4.18",
-    "uuid": "~3.3.2"
+    "uuid": "~3.3.2",
+    "mysql2": "~1.6.5",
+    "sequelize": "~5.17.0"
   }
 }
