--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "aws-sdk": "~2.451.0",
+    "serverless": "~1.50.1",
     "serverless-domain-manager": "~3.3.0",
     "serverless-dotenv-plugin": "~2.1.1",
     "serverless-offline": "~5.10.1",
