--- a/serverless.yml
+++ b/serverless.yml
@@ -12,11 +12,11 @@ custom:
     prod: api-emails.spacenow.com
   customDomain:
     domainName: ${self:custom.domains.${opt:stage, 'sandpit'}, self:custom.domains.default}
-    basePath: ""
+    basePath: ''
     stage: ${opt:stage, 'sandpit'}
     certificateArn: ${ssm:/${opt:stageCert, 'SANDPIT'}/ACM_CERTIFICATE}
     createRoute53Record: true
-    endpointType: "regional"
+    endpointType: 'regional'
   prune:
     automatic: true
     number: 5
@@ -27,20 +27,32 @@ dotenv:
   include:
     - EMAIL
     - DOMAIN
+    - DATABASE_SCHEMA
+    - DATABASE_HOST
+    - DATABASE_USERNAME
+    - DATABASE_PASSWORD
+    - API_BOOKING
+    - NEW_LISTING_PROCESS_HOST
 
 provider:
   name: aws
   runtime: nodejs10.x
   stage: ${opt:stage, 'sandpit'}
   region: ap-southeast-2
+  iamRoleStatements:
+    - Effect: 'Allow'
+      Action:
+        - 'ses:SendTemplatedEmail'
+      Resource: '*'
   environment:
     EMAIL: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/ADMIN_EMAIL, env:EMAIL}
     DOMAIN: ${env:DOMAIN}
-  iamRoleStatements:
-    - Effect: "Allow"
-      Action:
-        - "ses:SendTemplatedEmail"
-      Resource: "*"
+    DATABASE_SCHEMA: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/DATABASE_SCHEMA~true}
+    DATABASE_HOST: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/DATABASE_HOST~true}
+    DATABASE_USERNAME: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/DATABASE_USER~true}
+    DATABASE_PASSWORD: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/DATABASE_PASSWORD~true}
+    API_BOOKING: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/API_BOOKING~true}
+    NEW_LISTING_PROCESS_HOST: ${ssm:/${opt:stageCert, 'SANDPIT'}/SPACENOW/NEW_LISTING_PROCESS_HOST~true}
 
 functions:
   send:
