Applying lambda default struture.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A Node.js starter for the Serverless Framework with async/await and unit test support",
   "main": "handler.js",
   "scripts": {
+    "dev": "./node_modules/.bin/serverless offline -s dev -P 6010",
+    "debug": "export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev -P 6010",
     "create-template": "aws ses create-template --cli-input-json file://templates/enquiry-guest.json",
     "update-template": "aws ses update-template --cli-input-json file://templates/report-listing.json",
-    "send": "serverless invoke local --function send --path ./mocks/send-welcome-email.json",
-    "debug": "export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev -P 6008"
+    "send": "serverless invoke local --function send --path ./mocks/send-welcome-email.json"
   },
   "author": "Lucas Nascimento",
   "license": "MIT",
@@ -24,9 +25,10 @@
     "serverless-prune-plugin": "~1.4.0"
   },
   "dependencies": {
+    "axios": "~0.19.0",
     "moment": "~2.24.0",
-    "uuid": "~3.3.2",
     "mysql2": "~1.6.5",
-    "sequelize": "~5.17.0"
+    "sequelize": "~5.17.0",
+    "uuid": "~3.3.2"
   }
 }
