--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ DEBUG=TRUE
 ADMIN_EMAIL=admin@spacenow.com
 DOMAIN=*
 DATABASE_SCHEMA=spacenow_2019
-DATABASE_HOST=127.0.0.1
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=root
+DATABASE_HOST=localhost
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 API_BOOKING=http://localhost:6012/bookings
 NEW_LISTING_PROCESS_HOST=https://localhost:3003
