--- a/serverless.yml
+++ b/serverless.yml
@@ -24,11 +24,11 @@ custom:
     prod: sg-00b4a2172f7e29276
   customDomain:
     domainName: ${self:custom.domains.${opt:stage, 'sandpit'}, self:custom.domains.default}
-    basePath: ""
+    basePath: ''
     stage: ${opt:stage, 'sandpit'}
     certificateArn: ${ssm:/${opt:stageCert, 'SANDPIT'}/ACM_CERTIFICATE}
     createRoute53Record: true
-    endpointType: "regional"
+    endpointType: 'regional'
   prune:
     automatic: true
     number: 5
@@ -55,10 +55,10 @@ provider:
   stage: ${opt:stage, 'sandpit'}
   region: ap-southeast-2
   iamRoleStatements:
-    - Effect: "Allow"
+    - Effect: 'Allow'
       Action:
-        - "ses:SendTemplatedEmail"
-      Resource: "*"
+        - 'ses:SendTemplatedEmail'
+      Resource: '*'
   vpc:
     securityGroupIds:
       - ${self:custom.securityGroup.${opt:stage, 'sandpit'}}
@@ -150,6 +150,14 @@ functions:
           path: email/booking/{bookingId}/expired
           method: post
           cors: true
+  sendEmailBookingTimedOutGuest:
+    handler: src/functions/sendEmailBookingTimedOutGuest.main
+    memorySize: 1024
+    events:
+      - http:
+          path: email/booking/{bookingId}/timedout
+          method: post
+          cors: true
   sendEmailCompleteListing:
     handler: src/functions/sendEmailCompleteListing.main
     memorySize: 1024
@@ -176,12 +184,12 @@ functions:
           method: post
           cors: true
       - schedule: rate(60 minutes)
-  sendEmailBookingTimedOutGuest:
-    handler: src/functions/sendEmailBookingTimedOutGuest.main
+  sendEmailInspectionNotification:
+    handler: src/functions/sendEmailInspection.main
     memorySize: 1024
     events:
       - http:
-          path: email/booking/{bookingId}/timedout
+          path: email/message/{messageId}/inspection
           method: post
           cors: true
 
