adding bcc from parameter store

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 API_BOOKING=http://localhost:6012/bookings
 NEW_LISTING_PROCESS_HOST=https://localhost:3003
+BBC_EMAILS='email1@gmai.com' 'email2@gmail.com'
